# password-manager

./: Cargo.toml  LICENSE  README.md
docs/screenshots/: .gitkeep
frontend/: app.js  guide.html  index.html
src/: config.rs  crypto.rs  main.rs  twofa.rs  vault_store.rs
