[package]
name = "vault-pm-rs"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "Vault"
path = "src/main.rs"

[dependencies]
axum          = { version = "0.7", features = ["macros", "multipart"] }
tokio         = { version = "1",   features = ["full"] }
tower-http    = { version = "0.5", features = ["fs"] }
serde         = { version = "1",   features = ["derive"] }
serde_json    = "1"
serde_cbor    = "0.11"
anyhow        = "1"
argon2        = "0.5"
aes-gcm       = "0.10"
base64        = "0.22"
uuid          = { version = "1",   features = ["v4"] }
rand          = "0.8"
totp-rs       = { version = "5",   features = ["gen_secret"] }
sha2          = "0.10"
hex           = "0.4"
once_cell     = "1"
open          = "5"
rust-embed    = "8"
mime_guess    = "2"
lettre        = { version = "0.11", features = ["smtp-transport", "tokio1-native-tls", "builder"] }
qrcode        = "0.14"
image         = { version = "0.25", default-features = false, features = ["png"] }
p256          = { version = "0.13", features = ["ecdsa"] }

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
